kubernetes/front/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: front                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
      labels:
        app: front              # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: front:3      # образ Docker
          imagePullPolicy: Never   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: front           # ім'я контейнеру
          ports:
            - containerPort: 8085 # порт по якому можна звертатись до поди
