kubernetes/front/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /front
            pathType: "Prefix"
            backend:
              service:
                name: front-client
                port:
                  number: 8085
